--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,6 @@
       box-shadow: 0 0 10px rgba(0,0,0,0.2);
     }
 
-    /* Nouveau bouton changer pseudo */
     #resetBtn {
       margin-bottom: 10px;
       padding: 6px 12px;
@@ -46,13 +45,31 @@
     #resetBtn:hover {
       background-color: #e04a4a;
     }
+
+    #avatarPreview {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      margin: 10px 0;
+      object-fit: cover;
+      display: none;
+    }
+
+    input[type="file"] {
+      margin-top: 10px;
+    }
   </style>
 </head>
 <body>
   <!-- Section de connexion -->
   <div id="login">
     <h2>Choisis un pseudo</h2>
-    <input type="text" id="usernameInput" placeholder="Ton pseudo">
+    <input type="text" id="usernameInput" placeholder="Ton pseudo"><br><br>
+
+    <label>Photo de profil :</label><br>
+    <input type="file" id="avatarInput" accept="image/*"><br>
+    <img id="avatarPreview"><br>
+
     <button onclick="setUsername()">Entrer</button>
   </div>
 
@@ -65,13 +82,13 @@
     <div id="chatWindow">
       <h3 id="channelTitle">Canal Général</h3>
 
-      <!-- ✅ Bouton de réinitialisation -->
+      <!-- Boutons profil -->
       <button id="resetBtn" onclick="resetUsername()">Changer de pseudo</button>
+      <button onclick="changeAvatar()">Changer la photo</button>
 
       <div id="messages"></div>
       <div id="typingIndicator" style="font-style: italic; height: 20px;"></div>
 
-      <!-- ✅ Bloc stylé avec fond pour la saisie -->
       <div id="messageArea">
         <div id="emoji-picker">
           <span>😀</span><span>😂</span><span>😍</span><span>😎</span><span>😭</span>
@@ -84,7 +101,6 @@
         <input type="file" id="imageInput" accept="image/*">
       </div>
 
-      <!-- Bouton retour canal général -->
       <div id="privateChatControls" style="display: none;">
         <button onclick="switchToGeneral()">Retour au canal général</button>
       </div>
@@ -94,7 +110,6 @@
   <script src="/socket.io/socket.io.js"></script>
   <script src="client.js"></script>
 
-  <!-- Gestion des clics emoji -->
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       document.querySelectorAll('#emoji-picker span').forEach(emoji => {
@@ -103,6 +118,21 @@
           input.value += emoji.textContent;
           input.focus();
         });
+      });
+
+      const avatarInput = document.getElementById('avatarInput');
+      const avatarPreview = document.getElementById('avatarPreview');
+
+      avatarInput.addEventListener('change', () => {
+        const file = avatarInput.files[0];
+        if (file) {
+          const reader = new FileReader();
+          reader.onload = () => {
+            avatarPreview.src = reader.result;
+            avatarPreview.style.display = 'block';
+          };
+          reader.readAsDataURL(file);
+        }
       });
     });
   </script>
