Ajout des modifications avatar dans le chat

--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,35 @@
     input[type="file"] {
       margin-top: 10px;
     }
+
+    /* Nouveau style pour les images de profil */
+    .profile-img {
+      width: 40px; /* Taille plus grande */
+      height: 40px; /* Taille plus grande */
+      border-radius: 50%; /* Forme ronde */
+      object-fit: cover; /* Assure que l'image est bien ajustée */
+      margin-right: 10px; /* Un peu d'espace entre l'image et le texte */
+    }
+
+    /* Style pour les messages */
+    .message {
+      margin-bottom: 10px;
+      background: #f0f0f0;
+      padding: 8px 12px;
+      border-radius: 10px;
+      max-width: 70%;
+      word-wrap: break-word;
+      display: flex;
+      align-items: center;
+    }
+
+    /* Style pour les images dans les messages */
+    .chat-image {
+      max-width: 200px;
+      border-radius: 10px;
+      display: block;
+      margin-top: 5px;
+    }
   </style>
 </head>
 <body>
