--- a/public/index.html
+++ b/public/index.html
@@ -3,143 +3,56 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>MyChat</title>
+  <title>Mini Chat App</title>
   <link rel="stylesheet" href="style.css" />
-  <style>
-    #emoji-picker {
-      margin-top: 10px;
-      font-size: 24px;
-      user-select: none;
-    }
-    #emoji-picker span {
-      cursor: pointer;
-      padding: 5px;
-      margin: 2px;
-      border-radius: 5px;
-      transition: background 0.2s;
-    }
-    #emoji-picker span:hover {
-      background: #eee;
-    }
-
-    #messageArea {
-      background-image: url('https://i.pinimg.com/originals/e2/a5/20/e2a5200ca81ee9359add0cba9cafd758.jpg');
-      background-size: cover;
-      background-position: center;
-      padding: 15px;
-      border-radius: 10px;
-      margin-top: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
-    }
-
-    #resetBtn {
-      margin-bottom: 10px;
-      padding: 6px 12px;
-      background-color: #ff5c5c;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-
-    #resetBtn:hover {
-      background-color: #e04a4a;
-    }
-
-    #avatarPreview {
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      margin: 10px 0;
-      object-fit: cover;
-      display: none;
-    }
-
-    input[type="file"] {
-      margin-top: 10px;
-    }
-
-    /* Style pour le bouton ⚙️ en haut à droite */
-    #settingsBtn {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      font-size: 24px;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      padding: 10px;
-      border-radius: 50%;
-      cursor: pointer;
-      z-index: 1000;
-    }
-
-    #settingsMenu {
-      display: none;
-      position: fixed;
-      top: 60px;
-      right: 20px;
-      background-color: white;
-      padding: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      border-radius: 8px;
-      z-index: 999;
-    }
-
-    #settingsMenu button {
-      margin: 5px 0;
-    }
-
-  </style>
 </head>
 <body>
   <!-- Section de connexion -->
   <div id="login">
     <h2>Choisis un pseudo</h2>
-    <input type="text" id="usernameInput" placeholder="Ton pseudo"><br><br>
-
-    <label>Photo de profil :</label><br>
-    <input type="file" id="avatarInput" accept="image/*"><br>
-    <img id="avatarPreview"><br>
-
-    <button onclick="setUsername()">Entrer</button>
+    <input id="usernameInput" type="text" placeholder="Ton pseudo" />
+    <br />
+    <label for="avatarInput">Choisis une photo</label>
+    <input id="avatarInput" type="file" accept="image/*" />
+    <br />
+    <button onclick="setUsername()">Entrer dans le chat</button>
   </div>
 
-  <!-- Section de chat (affichée une fois le pseudo choisi) -->
+  <!-- Section de chat -->
   <div id="chat" class="hidden">
-    <div id="sidebar">
-      <h3>Utilisateurs</h3>
-      <ul id="usersList"></ul>
-    </div>
-    <div id="chatWindow">
-      <h3 id="channelTitle">Canal Général</h3>
-
-      <!-- Section des paramètres -->
+    <header>
+      <h1>Mini Chat</h1>
       <button id="settingsBtn">⚙️</button>
-      <div id="settingsMenu">
-        <button id="resetBtn" onclick="resetUsername()">Changer de pseudo</button>
-        <button id="changeAvatarBtn">Changer la photo</button>
-      </div>
+    </header>
 
-      <div id="messages"></div>
-      <div id="typingIndicator" style="font-style: italic; height: 20px;"></div>
-
-      <div id="messageArea">
-        <div id="emoji-picker">
-          <span>😀</span><span>😂</span><span>😍</span><span>😎</span><span>😭</span>
-          <span>😡</span><span>👍</span><span>🙏</span><span>💀</span><span>🎉</span><span>❤️</span>
-        </div>
-
-        <input type="text" id="messageInput" placeholder="Écris un message...">
-        <button onclick="sendMessage()">Envoyer</button>
-
-        <input type="file" id="imageInput" accept="image/*">
-      </div>
-
-      <div id="privateChatControls" style="display: none;">
-        <button onclick="switchToGeneral()">Retour au canal général</button>
-      </div>
+    <div id="settingsMenu">
+      <button onclick="resetUsername()">Changer pseudo</button>
+      <button id="changeAvatarBtn">Changer photo</button>
     </div>
+
+    <div id="channelTitle">Canal Général</div>
+
+    <div id="typingIndicator" style="font-style: italic; height: 20px;"></div>
+
+    <div id="messages"></div>
+
+    <div id="privateChatControls" style="display:none;">
+      <button onclick="switchToGeneral()">Retour au général</button>
+    </div>
+
+    <div id="inputContainer">
+      <div id="emoji-picker">
+        <span>😀</span><span>😂</span><span>😍</span><span>😎</span><span>😭</span>
+        <span>😡</span><span>👍</span><span>🙏</span><span>💀</span><span>🎉</span><span>❤️</span>
+      </div>
+
+      <input id="messageInput" type="text" placeholder="Tape un message..." oninput="socket.emit('typing', currentChannel)" />
+      <button onclick="sendMessage()">Envoyer</button>
+      <input type="file" id="imageInput" accept="image/*" />
+    </div>
+
+    <h3>Utilisateurs connectés :</h3>
+    <ul id="usersList"></ul>
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
@@ -147,29 +60,28 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      // Afficher le menu des paramètres
-      document.getElementById('settingsBtn').addEventListener('click', () => {
-        const settingsMenu = document.getElementById('settingsMenu');
-        settingsMenu.style.display = settingsMenu.style.display === 'block' ? 'none' : 'block';
+      const settingsBtn = document.getElementById('settingsBtn');
+      const settingsMenu = document.getElementById('settingsMenu');
+      const emojiPicker = document.getElementById('emoji-picker');
+      const messageInput = document.getElementById('messageInput');
+
+      settingsBtn.addEventListener('click', () => {
+        settingsMenu.classList.toggle('show');
       });
 
-      const avatarInput = document.getElementById('avatarInput');
-      const avatarPreview = document.getElementById('avatarPreview');
-
-      // Changer la photo de profil indépendamment
-      document.getElementById('changeAvatarBtn').addEventListener('click', () => {
-        avatarInput.click();
+      emojiPicker.querySelectorAll('span').forEach(emoji => {
+        emoji.addEventListener('click', () => {
+          messageInput.value += emoji.textContent;
+          messageInput.focus();
+        });
       });
 
-      avatarInput.addEventListener('change', () => {
-        const file = avatarInput.files[0];
-        if (file) {
-          const reader = new FileReader();
-          reader.onload = () => {
-            avatarPreview.src = reader.result;
-            avatarPreview.style.display = 'block';
-          };
-          reader.readAsDataURL(file);
+      messageInput.addEventListener('keydown', (e) => {
+        if (e.key === 'Enter' && !e.shiftKey) {
+          e.preventDefault();
+          sendMessage();
+        } else {
+          socket.emit('typing', currentChannel);
         }
       });
     });
