--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,125 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>MyChat</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    #emoji-picker {
+      margin-top: 10px;
+      font-size: 24px;
+      user-select: none;
+    }
+    #emoji-picker span {
+      cursor: pointer;
+      padding: 5px;
+      margin: 2px;
+      border-radius: 5px;
+      transition: background 0.2s;
+    }
+    #emoji-picker span:hover {
+      background: #eee;
+    }
+
+    #messageArea {
+      background-image: url('https://i.pinimg.com/originals/e2/a5/20/e2a5200ca81ee9359add0cba9cafd758.jpg');
+      background-size: cover;
+      background-position: center;
+      padding: 15px;
+      border-radius: 10px;
+      margin-top: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    }
+
+    #resetBtn {
+      margin-bottom: 10px;
+      padding: 6px 12px;
+      background-color: #ff5c5c;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    #resetBtn:hover {
+      background-color: #e04a4a;
+    }
+
+    #avatarPreview {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      margin: 10px 0;
+      object-fit: cover;
+      display: none;
+    }
+
+    input[type="file"] {
+      margin-top: 10px;
+    }
+
+    /* Style pour le bouton ⚙️ en haut à droite */
+    #settingsBtn {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      font-size: 24px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      padding: 10px;
+      border-radius: 50%;
+      cursor: pointer;
+      z-index: 1000;
+    }
+
+    #settingsMenu {
+      display: none;
+      position: fixed;
+      top: 60px;
+      right: 20px;
+      background-color: white;
+      padding: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      border-radius: 8px;
+      z-index: 999;
+      transition: max-height 0.3s ease;
+      overflow: hidden;
+    }
+
+    #settingsMenu.show {
+      display: block;
+    }
+
+    #settingsMenu button {
+      margin: 5px 0;
+    }
+  </style>
 </head>
 <body>
   <!-- Section de connexion -->
   <div id="login">
-    <h2>Choisis un pseudo</h2>
-    <input type="text" id="usernameInput" placeholder="Ton pseudo"><br><br>
+    <div style="display: flex; align-items: center; gap: 10px;">
+      <h2 style="margin: 0;">Choisis un pseudo</h2>
+      <button id="settingsBtn">⚙️</button>
+    </div>
 
-    <label>Photo de profil :</label><br>
-    <input type="file" id="avatarInput" accept="image/*"><br>
-    <img id="avatarPreview"><br>
+    <div id="settingsMenu">
+      <button id="resetBtn" onclick="toggleLoginFields('username')">Changer de pseudo</button>
+      <button id="changeAvatarBtn" onclick="toggleLoginFields('avatar')">Changer la photo</button>
+    </div>
+
+    <div id="usernameField">
+      <input type="text" id="usernameInput" placeholder="Ton pseudo"><br><br>
+    </div>
+
+    <div id="avatarField">
+      <label>Photo de profil :</label><br>
+      <input type="file" id="avatarInput" accept="image/*"><br>
+      <img id="avatarPreview"><br>
+    </div>
 
     <button onclick="setUsername()">Entrer</button>
   </div>
 
-  <!-- Section de chat (affichée une fois le pseudo choisi) -->
+  <!-- Section de chat -->
   <div id="chat" class="hidden">
     <div id="sidebar">
       <h3>Utilisateurs</h3>
@@ -27,10 +131,6 @@
     </div>
     <div id="chatWindow">
       <h3 id="channelTitle">Canal Général</h3>
-
-      <!-- Boutons profil -->
-      <button id="resetBtn" onclick="resetUsername()">Changer de pseudo</button>
-      <button onclick="changeAvatar()">Changer la photo</button>
 
       <div id="messages"></div>
       <div id="typingIndicator" style="font-style: italic; height: 20px;"></div>
@@ -58,6 +158,14 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
+      const settingsBtn = document.getElementById('settingsBtn');
+      const settingsMenu = document.getElementById('settingsMenu');
+
+      settingsBtn.addEventListener('click', () => {
+        settingsMenu.classList.toggle('show');
+      });
+
+      // Insertion emoji
       document.querySelectorAll('#emoji-picker span').forEach(emoji => {
         emoji.addEventListener('click', () => {
           const input = document.getElementById('messageInput');
@@ -66,21 +174,22 @@
         });
       });
 
-      const avatarInput = document.getElementById('avatarInput');
-      const avatarPreview = document.getElementById('avatarPreview');
-
-      avatarInput.addEventListener('change', () => {
-        const file = avatarInput.files[0];
-        if (file) {
-          const reader = new FileReader();
-          reader.onload = () => {
-            avatarPreview.src = reader.result;
-            avatarPreview.style.display = 'block';
-          };
-          reader.readAsDataURL(file);
+      // Touche entrée pour envoyer message
+      const msgInput = document.getElementById('messageInput');
+      msgInput.addEventListener('keydown', (e) => {
+        if (e.key === 'Enter' && !e.shiftKey) {
+          e.preventDefault();
+          sendMessage();
+        } else {
+          socket.emit("typing", currentChannel);
         }
       });
     });
+
+    function toggleLoginFields(mode) {
+      document.getElementById('usernameField').style.display = mode === 'username' ? 'block' : 'none';
+      document.getElementById('avatarField').style.display = mode === 'avatar' ? 'block' : 'none';
+    }
   </script>
 </body>
 </html>
